--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Kider - Preschool Website Template</title>
+    <title>Brainy Kids - Центр дитячого розвитку Вінниця. Підготовка до школи, дошколярик, англійська для дошкільнят, логопед.</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <meta content="" name="keywords">
     <meta content="" name="description">
@@ -62,7 +62,7 @@
                         <div class="dropdown-menu rounded-0 rounded-bottom border-0 shadow-sm m-0">
                             <a href="facility.html" class="dropdown-item">Напрямки підготовки</a>
                             <a href="team.html" class="dropdown-item">Наші викладачі</a>
-                            <a href="call-to-action.html" class="dropdown-item">Наша історія</a>
+                            <a href="our-history.html" class="dropdown-item">Наша історія</a>
                             <a href="appointment.html" class="dropdown-item">Залишити заявку</a>
                             <a href="testimonial.html" class="dropdown-item">Відгуки</a>
                         </div>
@@ -78,28 +78,46 @@
         <div class="container-fluid p-0 mb-5">
             <div class="owl-carousel header-carousel position-relative">
                 <div class="owl-carousel-item position-relative">
-                    <img class="img-fluid" src="img/carousel-1.jpg" alt="">
+                    <img class="img-fluid" src="img/carousel-1.jpg" alt="BrainyKids-slider1">
                     <div class="position-absolute top-0 start-0 w-100 h-100 d-flex align-items-center" style="background: rgba(0, 0, 0, .2);">
                         <div class="container">
                             <div class="row justify-content-start">
                                 <div class="col-10 col-lg-8">
                                     <h1 class="display-2 text-white animated slideInDown mb-4">Brainy Kids<br/><p class="display-4">Центр дитячого розвитку</p></h1>
-                                    <p class="fs-5 fw-medium text-white mb-4 pb-2">Vero elitr justo clita lorem. Ipsum dolor at sed stet sit diam no. Kasd rebum ipsum et diam justo clita et kasd rebum sea elitr.</p>
+                                    <p class="fs-5 fw-medium text-white mb-4 pb-2">Це сучасний центр розвитку дітей у Вінниці, створений для малюків віком 4–6 років</p>
                                     <a href="classes.html" class="btn btn-primary rounded-pill py-sm-3 px-sm-5 me-3 animated slideInLeft">Дізнатись більше</a>
+                                    <a href="appointment.html" class="btn btn-dark rounded-pill py-sm-3 px-sm-5 animated slideInRight">Записатись на курс</a>
                                 </div>
                             </div>
                         </div>
                     </div>
                 </div>
                 <div class="owl-carousel-item position-relative">
-                    <img class="img-fluid" src="img/carousel-2.jpg" alt="">
+                    <img class="img-fluid" src="img/carousel-2.jpg" alt="BrainyKids-slider2">
                     <div class="position-absolute top-0 start-0 w-100 h-100 d-flex align-items-center" style="background: rgba(0, 0, 0, .2);">
                         <div class="container">
                             <div class="row justify-content-start">
                                 <div class="col-10 col-lg-8">
                                     <h1 class="display-2 text-white animated slideInDown mb-4">Подбайте про майбутнє своєї дитини сьогодні</h1>
-                                    <p class="fs-5 fw-medium text-white mb-4 pb-2">Vero elitr justo clita lorem. Ipsum dolor at sed stet sit diam no. Kasd rebum ipsum et diam justo clita et kasd rebum sea elitr.</p>
+                                    <p class="fs-5 fw-medium text-white mb-4 pb-2">Ми віримо, що кожна дитина унікальна й має безмежний потенціал</p>
                                     <a href="classes.html" class="btn btn-primary rounded-pill py-sm-3 px-sm-5 me-3 animated slideInLeft">Дізнатись більше</a>
+                                    <a href="appointment.html" class="btn btn-dark rounded-pill py-sm-3 px-sm-5 animated slideInRight">Записатись на курс</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="owl-carousel-item position-relative">
+                    <img class="img-fluid" src="img/carousel-3.jpg" alt="BrainyKids-slider3">
+                    <div class="position-absolute top-0 start-0 w-100 h-100 d-flex align-items-center" style="background: rgba(0, 0, 0, .2);">
+                        <div class="container">
+                            <div class="row justify-content-start">
+                                <div class="col-10 col-lg-8">
+                                    <h1 class="display-2 text-white animated slideInDown mb-4">Команда професійних педагогів</h1>
+                                    <p class="fs-5 fw-medium text-white mb-4 pb-2">Наша команда професійних педагогів створює теплу й творчу атмосферу, де діти навчаються, 
+                                        розкривають свої таланти та готуються до шкільного життя із задоволенням</p>
+                                    <a href="classes.html" class="btn btn-primary rounded-pill py-sm-3 px-sm-5 me-3 animated slideInLeft">Дізнатись більше</a>
+                                    <a href="appointment.html" class="btn btn-dark rounded-pill py-sm-3 px-sm-5 animated slideInRight">Записатись на курс</a>
                                 </div>
                             </div>
                         </div>
@@ -114,20 +132,20 @@
         <div class="container-xxl py-5">
             <div class="container">
                 <div class="text-center mx-auto mb-5 wow fadeInUp" data-wow-delay="0.1s" style="max-width: 600px;">
-                    <h1 class="mb-3">School Facilities</h1>
-                    <p>Eirmod sed ipsum dolor sit rebum labore magna erat. Tempor ut dolore lorem kasd vero ipsum sit eirmod sit. Ipsum diam justo sed rebum vero dolor duo.</p>
+                    <h1 class="mb-3">Чому обирають саме нас?</h1>
+                    <p>Ми використовуємо сучасні методики навчання, поєднуючи ігрові форми, творчі проєкти та пізнавальні заняття. Завдяки індивідуальному підходу кожна дитина в BrainyKids розвиває самостійність, критичне мислення та навички комунікації.</p>
                 </div>
                 <div class="row g-4">
                     <div class="col-lg-3 col-sm-6 wow fadeInUp" data-wow-delay="0.1s">
                         <div class="facility-item">
                             <div class="facility-icon bg-primary">
                                 <span class="bg-primary"></span>
-                                <i class="fa fa-bus-alt fa-3x text-primary"></i>
+                                <i class="fa fa-solid fa-users fa-3x text-primary"></i>
                                 <span class="bg-primary"></span>
                             </div>
                             <div class="facility-text bg-primary">
-                                <h3 class="text-primary mb-3">School Bus</h3>
-                                <p class="mb-0">Eirmod sed ipsum dolor sit rebum magna erat lorem kasd vero ipsum sit</p>
+                                <h3 class="text-primary mb-3">Маленькі групи до 8 дітей</h3>
+                                <p class="mb-0">Завдяки невеликим групам, ми приділяємо максимум уваги кожній дитині, розкриваючи її унікальні здібності</p>
                             </div>
                         </div>
                     </div>
@@ -135,12 +153,12 @@
                         <div class="facility-item">
                             <div class="facility-icon bg-success">
                                 <span class="bg-success"></span>
-                                <i class="fa fa-futbol fa-3x text-success"></i>
+                                <i class="fa fa-solid fa-hand-holding-heart fa-3x text-success"></i>
                                 <span class="bg-success"></span>
                             </div>
                             <div class="facility-text bg-success">
-                                <h3 class="text-success mb-3">Playground</h3>
-                                <p class="mb-0">Eirmod sed ipsum dolor sit rebum magna erat lorem kasd vero ipsum sit</p>
+                                <h3 class="text-success mb-3">Професійні педагоги</h3>
+                                <p class="mb-0">Наша команда - це досвідчені фахівці, які щиро люблять дітей та знають, як знайти підхід до кожної дитини</p>
                             </div>
                         </div>
                     </div>
@@ -148,12 +166,12 @@
                         <div class="facility-item">
                             <div class="facility-icon bg-warning">
                                 <span class="bg-warning"></span>
-                                <i class="fa fa-home fa-3x text-warning"></i>
+                                <i class="fa fa-solid fa-user-graduate fa-3x text-warning"></i>
                                 <span class="bg-warning"></span>
                             </div>
                             <div class="facility-text bg-warning">
-                                <h3 class="text-warning mb-3">Healthy Canteen</h3>
-                                <p class="mb-0">Eirmod sed ipsum dolor sit rebum magna erat lorem kasd vero ipsum sit</p>
+                                <h3 class="text-warning mb-3">Власні програми розвитку</h3>
+                                <p class="mb-0">Ми враховуємо індивідуальні особливості кожної дитини, щоб забезпечити її гармонійний розвиток</p>
                             </div>
                         </div>
                     </div>
@@ -161,12 +179,12 @@
                         <div class="facility-item">
                             <div class="facility-icon bg-info">
                                 <span class="bg-info"></span>
-                                <i class="fa fa-chalkboard-teacher fa-3x text-info"></i>
+                                <i class="fa fa-solid fa-icons fa-3x text-info"></i>
                                 <span class="bg-info"></span>
                             </div>
                             <div class="facility-text bg-info">
-                                <h3 class="text-info mb-3">Positive Learning</h3>
-                                <p class="mb-0">Eirmod sed ipsum dolor sit rebum magna erat lorem kasd vero ipsum sit</p>
+                                <h3 class="text-info mb-3">Комфортна атмосфера</h3>
+                                <p class="mb-0">У нашому центрі створено комфортний простір, де діти почуваються як удома, ми дбаємо про кожну деталь</p>
                             </div>
                         </div>
                     </div>
@@ -181,19 +199,30 @@
             <div class="container">
                 <div class="row g-5 align-items-center">
                     <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.1s">
-                        <h1 class="mb-4">Learn More About Our Work And Our Cultural Activities</h1>
-                        <p>Tempor erat elitr rebum at clita. Diam dolor diam ipsum sit. Aliqu diam amet diam et eos. Clita erat ipsum et lorem et sit, sed stet lorem sit clita duo justo magna dolore erat amet</p>
-                        <p class="mb-4">Stet no et lorem dolor et diam, amet duo ut dolore vero eos. No stet est diam rebum amet diam ipsum. Clita clita labore, dolor duo nonumy clita sit at, sed sit sanctus dolor eos, ipsum labore duo duo sit no sea diam. Et dolor et kasd ea. Eirmod diam at dolor est vero nonumy magna.</p>
+                        <h1 class="mb-4">Дізнайтеся більше про наш центр розвитку, нашу роботу, наших фахівців</h1>
+                        <p>Центр почав свою роботу у травні 2024 року за такими основними напрямками:</p>
+                        <p class="mb-4">Річна програма "Підготовка до школи" включає в себе наші програми власної розробки по розвитку мовлення та навчання грамоти, 
+                            розвиток елементарних математичних уявлень, розвиток пізнавальних процесів...
+                        </p>
+                        <p class="mb-4">Курс для дітей за 2 роки до школи...
+                        </p>
+                        <p class="mb-4">Англійська для Супергероїв 4-6років...
+                        </p>
                         <div class="row g-4 align-items-center">
-                            <div class="col-sm-6">
-                                <a class="btn btn-primary rounded-pill py-3 px-5" href="">Read More</a>
+                            <div class="col-sm-6" style="flex: 0 0 auto; width: 40%;">
+                                <a class="btn btn-primary rounded-pill py-3 px-5" href="about.html">Більше...</a>
                             </div>
                             <div class="col-sm-6">
                                 <div class="d-flex align-items-center">
-                                    <img class="rounded-circle flex-shrink-0" src="img/user.jpg" alt="" style="width: 45px; height: 45px;">
+                                    <img class="rounded-circle flex-shrink-0" src="img/user_1.jpg" alt="" style="width: 45px; height: 45px;">
                                     <div class="ms-3">
-                                        <h6 class="text-primary mb-1">Jhon Doe</h6>
-                                        <small>CEO & Founder</small>
+                                        <h6 class="text-primary mb-1">Лілія <br>Гусонька</h6>
+                                        <small class="co-fou-text">Co-founder & Викладач</small>
+                                    </div>
+                                    <img class="rounded-circle flex-shrink-0" src="img/user_2.jpg" alt="" style="width: 45px; height: 45px;">
+                                    <div class="ms-3">
+                                        <h6 class="text-primary mb-1">Оксана <br>Затоковенко</h6>
+                                        <small class="co-fou-text">Co-founder & Викладач</small>
                                     </div>
                                 </div>
                             </div>
@@ -218,30 +247,33 @@
         <!-- About End -->
 
 
-        <!-- Call To Action Start -->
+        <!-- Our-history Start -->
         <div class="container-xxl py-5">
             <div class="container">
                 <div class="bg-light rounded">
                     <div class="row g-0">
                         <div class="col-lg-6 wow fadeIn" data-wow-delay="0.1s" style="min-height: 400px;">
                             <div class="position-relative h-100">
-                                <img class="position-absolute w-100 h-100 rounded" src="img/call-to-action.jpg" style="object-fit: cover;">
+                                <img class="position-absolute w-100 h-100 rounded" src="img/our-history_1.jpg" style="object-fit: cover;">
                             </div>
                         </div>
                         <div class="col-lg-6 wow fadeIn" data-wow-delay="0.5s">
                             <div class="h-100 d-flex flex-column justify-content-center p-5">
-                                <h1 class="mb-4">Become A Teacher</h1>
-                                <p class="mb-4">Tempor erat elitr rebum at clita. Diam dolor diam ipsum sit. Aliqu diam amet diam et eos.
-                                    Clita erat ipsum et lorem et sit, sed stet lorem sit clita duo justo magna dolore erat amet
+                                <h1 class="mb-4">Наша історія: народжені любов'ю до дітей</h1>
+                                <p class="mb-4">Історія нашого центру дитячого розвитку почалася з теплої дружби двох небайдужих сердець, 
+                                    об’єднаних спільною пристрастю – любов’ю до дітей та вірою в їх безмежний потенціал.
+                                    Ліля, вихователька з багаторічним досвідом, присвятила своє життя створенню затишної 
+                                    та розвиваючої атмосфери для малюків. Її мудрість, терпіння та глибоке розуміння дитячої 
+                                    психології надихали всіх навколо.                                    
                                 </p>
-                                <a class="btn btn-primary py-3 px-5" href="contact.html">Get Started Now<i class="fa fa-arrow-right ms-2"></i></a>
+                                <a class="btn btn-primary py-3 px-5" href="our-history.html">Читати далі<i class="fa fa-arrow-right ms-2"></i></a>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
-        <!-- Call To Action End -->
+        <!-- Our-history End -->
 
 
         <!-- Classes Start -->
@@ -499,7 +531,7 @@
 
 
         <!-- Appointment Start -->
-        <div class="container-xxl py-5">
+        <!-- <div class="container-xxl py-5">
             <div class="container">
                 <div class="bg-light rounded">
                     <div class="row g-0">
@@ -553,12 +585,12 @@
                     </div>
                 </div>
             </div>
-        </div>
+        </div> -->
         <!-- Appointment End -->
 
 
         <!-- Team Start -->
-        <div class="container-xxl py-5">
+        <!-- <div class="container-xxl py-5">
             <div class="container">
                 <div class="text-center mx-auto mb-5 wow fadeInUp" data-wow-delay="0.1s" style="max-width: 600px;">
                     <h1 class="mb-3">Popular Teachers</h1>
@@ -610,7 +642,7 @@
                     </div>
                 </div>
             </div>
-        </div>
+        </div> -->
         <!-- Team End -->
 
 
