--- a/our-history.html
+++ b/our-history.html
@@ -14,8 +14,10 @@
     <!-- Google Web Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Heebo:wght@400;500;600&family=Inter:wght@600&family=Lobster+Two:wght@700&display=swap" rel="stylesheet">
-    
+    <link
+        href="https://fonts.googleapis.com/css2?family=Heebo:wght@400;500;600&family=Inter:wght@600&family=Lobster+Two:wght@700&display=swap"
+        rel="stylesheet">
+
     <!-- Icon Font Stylesheet -->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.0/css/all.min.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.1/font/bootstrap-icons.css" rel="stylesheet">
@@ -34,7 +36,8 @@
 <body>
     <div class="container-xxl bg-white p-0">
         <!-- Spinner Start -->
-        <div id="spinner" class="show bg-white position-fixed translate-middle w-100 vh-100 top-50 start-50 d-flex align-items-center justify-content-center">
+        <div id="spinner"
+            class="show bg-white position-fixed translate-middle w-100 vh-100 top-50 start-50 d-flex align-items-center justify-content-center">
             <div class="spinner-border text-primary" style="width: 3rem; height: 3rem;" role="status">
                 <span class="sr-only">Loading...</span>
             </div>
@@ -62,7 +65,7 @@
                         <div class="dropdown-menu rounded-0 rounded-bottom border-0 shadow-sm m-0">
                             <a href="facility.html" class="dropdown-item">School Facilities</a>
                             <a href="team.html" class="dropdown-item">Popular Teachers</a>
-                            <a href="call-to-action.html" class="dropdown-item active">Become A Teachers</a>
+                            <a href="our-history.html" class="dropdown-item active">Become A Teachers</a>
                             <a href="appointment.html" class="dropdown-item">Make Appointment</a>
                             <a href="testimonial.html" class="dropdown-item">Testimonial</a>
                         </div>
@@ -90,30 +93,63 @@
         <!-- Page Header End -->
 
 
-        <!-- Call To Action Start -->
+        <!-- Our-history Start -->
         <div class="container-xxl py-5">
             <div class="container">
                 <div class="bg-light rounded">
                     <div class="row g-0">
                         <div class="col-lg-6 wow fadeIn" data-wow-delay="0.1s" style="min-height: 400px;">
                             <div class="position-relative h-100">
-                                <img class="position-absolute w-100 h-100 rounded" src="img/call-to-action.jpg" style="object-fit: cover;">
+                                <img class="position-absolute w-100 h-100 rounded" src="img/our-history_2.jpg"
+                                    style="object-fit: cover;">
                             </div>
                         </div>
                         <div class="col-lg-6 wow fadeIn" data-wow-delay="0.5s">
                             <div class="h-100 d-flex flex-column justify-content-center p-5">
-                                <h1 class="mb-4">Become A Teacher</h1>
-                                <p class="mb-4">Tempor erat elitr rebum at clita. Diam dolor diam ipsum sit. Aliqu diam amet diam et eos.
-                                    Clita erat ipsum et lorem et sit, sed stet lorem sit clita duo justo magna dolore erat amet
+                                <h1 class="mb-4">Наша історія: народжені любов'ю до дітей</h1>
+                                <p class="mb-4" style="text-align: justify;" >
+                                    Історія нашого центру дитячого розвитку почалася з теплої дружби двох
+                                    небайдужих сердець, об’єднаних спільною пристрастю – любов’ю до дітей та вірою в їх
+                                    безмежний потенціал.
+                                    Ліля, вихователька з багаторічним досвідом, присвятила своє життя створенню затишної
+                                    та розвиваючої атмосфери для малюків. Її мудрість, терпіння та глибоке розуміння
+                                    дитячої психології надихали всіх навколо.
+                                    Оксана приєдналася до групи Лілі як асистент вихователя, принісши з собою не лише
+                                    енергію та щире захоплення дитячою безпосередністю, але й цінний досвід роботи з
+                                    дітьми. Маючи освіту вихователя та логопеда, Оксана прагнула розширити свій
+                                    професійний горизонт і спробувати себе в новій ролі асистента вихователя, щоб глибше
+                                    пізнати особливості розвитку дітей з ООП.
+                                    Їх спільна робота швидко переросла у міцну дружбу, засновану на взаєморозумінні та
+                                    спільних цінностях. Працюючи пліч-о-пліч, Ліля та Оксана відчули, наскільки
+                                    комфортно та гармонійно вони доповнюють одна одну. Вони поділяли однакові погляди на
+                                    важливість індивідуального підходу до кожної дитини, створення сприятливого
+                                    середовища для її всебічного розвитку та підтримки природної допитливості.
+                                    Саме в цей час, сповнені натхнення та спільного бачення, у Лілі та Оксани зародилася
+                                    мрія – створити власний простір, де кожна дитина зможе розкрити свої таланти,
+                                    відчути радість пізнання та отримати міцний фундамент для майбутніх звершень.
+                                    Проте, на початку шляху ми зіткнулися з багатьма невідомими. У нас була лише палаюча
+                                    мрія та віра в її здійснення, але бракувало знань у веденні бізнесу та необхідних
+                                    фінансових ресурсів. Ми не знали, з чого саме почати цей непростий, але такий
+                                    важливий для нас шлях.
+                                    Але, як кажуть, коли щиро чогось прагнеш усім серцем, світ ніби починає допомагати.
+                                    І в нашому випадку це виявилося саме так. Крок за кроком, долаючи перешкоди та
+                                    навчаючись новому, наша мрія почала набувати реальних обрисів. З кожною маленькою
+                                    перемогою, з кожною знайденою можливістю, наша віра у власні сили міцніла.
+                                    І ось, завдяки наполегливості, підтримці добрих людей та незгасимому бажанню
+                                    створити особливе місце для дітей, народився наш центр дитячого розвитку – "Brainy
+                                    Kids". Назва, яка відображає нашу віру в безмежний інтелектуальний та творчий
+                                    потенціал кожної дитини, у їхню природну допитливість та прагнення до знань.
+
                                 </p>
-                                <a class="btn btn-primary py-3 px-5" href="">Get Started Now<i class="fa fa-arrow-right ms-2"></i></a>
+                                <a class="btn btn-primary py-3 px-5" href="appointment.html">Записатись на курс<i
+                                        class="fa fa-arrow-right ms-2"></i></a>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
-        <!-- Call To Action End -->
+        <!-- Our-history End -->
 
 
         <!-- Footer Start -->
@@ -167,8 +203,10 @@
                         <h3 class="text-white mb-4">Newsletter</h3>
                         <p>Dolor amet sit justo amet elitr clita ipsum elitr est.</p>
                         <div class="position-relative mx-auto" style="max-width: 400px;">
-                            <input class="form-control bg-transparent w-100 py-3 ps-4 pe-5" type="text" placeholder="Your email">
-                            <button type="button" class="btn btn-primary py-2 position-absolute top-0 end-0 mt-2 me-2">SignUp</button>
+                            <input class="form-control bg-transparent w-100 py-3 ps-4 pe-5" type="text"
+                                placeholder="Your email">
+                            <button type="button"
+                                class="btn btn-primary py-2 position-absolute top-0 end-0 mt-2 me-2">SignUp</button>
                         </div>
                     </div>
                 </div>
@@ -177,8 +215,8 @@
                 <div class="copyright">
                     <div class="row">
                         <div class="col-md-6 text-center text-md-start mb-3 mb-md-0">
-                            &copy; <a class="" href="#">BrainyKids </a>, All Right Reserved. 
-							<i class="text-bg-copyright"> <a href="https://htmlcodex.com">Designed By HTML Codex</a></i> 
+                            &copy; <a class="" href="#">BrainyKids </a>, All Right Reserved.
+                            <i class="text-bg-copyright"> <a href="https://htmlcodex.com">Designed By HTML Codex</a></i>
                         </div>
                         <div class="col-md-6 text-center text-md-end">
                             <div class="footer-menu">
