Update our history

--- a/our-history.html
+++ b/our-history.html
@@ -2,6 +2,8 @@
 <html lang="en">
 
 <head>
+    <link rel="icon" type="image/png" sizes="32x32" href="img/BrainyKids-logo.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="img/BrainyKids-logo.png">
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Brainy Kids - Центр дитячого розвитку Вінниця. Підготовка до школи, дошколярик, англійська для дошкільнят, логопед.</title>
@@ -63,19 +65,19 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarCollapse">
                 <div class="navbar-nav mx-auto">
-                    <a href="index.html" class="nav-item nav-link">Home</a>
-                    <a href="about.html" class="nav-item nav-link">About Us</a>
-                    <a href="classes.html" class="nav-item nav-link">Classes</a>
+                    <a href="index.html" class="nav-item nav-link">Головна</a>
+                    <a href="about.html" class="nav-item nav-link">Про нас</a>
+                    <a href="classes.html" class="nav-item nav-link">Напрямки</a>
                     <div class="nav-item dropdown">
-                        <a href="#" class="nav-link dropdown-toggle active" data-bs-toggle="dropdown">Pages</a>
+                        <a href="#" class="nav-link dropdown-toggle active" data-bs-toggle="dropdown">Меню</a>
                         <div class="dropdown-menu rounded-0 rounded-bottom border-0 shadow-sm m-0">
-                            <a href="facility.html" class="dropdown-item">School Facilities</a>
-                            <a href="our-history.html" class="dropdown-item active">Become A Teachers</a>
-                            <a href="appointment.html" class="dropdown-item">Make Appointment</a>
-                            <a href="testimonial.html" class="dropdown-item">Testimonial</a>
+                            <a href="facility.html" class="dropdown-item">Напрямки підготовки</a>
+                            <a href="our-history.html" class="dropdown-item active">Наша історія</a>
+                            <a href="appointment.html" class="dropdown-item">Залишити заявку</a>
+                            <a href="testimonial.html" class="dropdown-item">Відгуки</a>
                         </div>
                     </div>
-                    <a href="contact.html" class="nav-item nav-link">Contact Us</a>
+                    <a href="contact.html" class="nav-item nav-link">Контакти</a>
                 </div>
             </div>
         </nav>
@@ -85,12 +87,12 @@
         <!-- Page Header End -->
         <div class="container-xxl py-5 page-header position-relative mb-5">
             <div class="container py-5">
-                <h1 class="display-2 text-white animated slideInDown mb-4">Become A Teachers</h1>
+                <h1 class="display-2 text-white animated slideInDown mb-4">Наша історія</h1>
                 <nav aria-label="breadcrumb animated slideInDown">
                     <ol class="breadcrumb">
-                        <li class="breadcrumb-item"><a href="index.html">Home</a></li>
-                        <li class="breadcrumb-item"><a href="#">Pages</a></li>
-                        <li class="breadcrumb-item text-white active" aria-current="page">Become A Teachers</li>
+                        <li class="breadcrumb-item"><a href="index.html">Головна</a></li>
+                        <li class="breadcrumb-item"><a href="#">Меню</a></li>
+                        <li class="breadcrumb-item text-white active" aria-current="page">Наша історія</li>
                     </ol>
                 </nav>
             </div>
