--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
                                 <div class="col-10 col-lg-8">
                                     <h1 class="display-2 text-white animated slideInDown mb-4">Brainy Kids<br/><p class="display-4">Центр дитячого розвитку</p></h1>
                                     <p class="fs-5 fw-medium text-white mb-4 pb-2">Це сучасний центр розвитку дітей у Вінниці, створений для малюків віком 4–6 років</p>
-                                    <a href="classes.html" class="btn btn-primary rounded-pill py-sm-3 px-sm-5 me-3 animated slideInLeft">Дізнатись більше</a>
+                                    <a href="classes.html" class="btn btn-primary rounded-pill py-sm-3 px-sm-5 me-3 animated slideInLeft" style="margin-bottom: .375rem;">Дізнатись більше</a>
                                     <a href="appointment.html" class="btn btn-dark rounded-pill py-sm-3 px-sm-5 animated slideInRight">Записатись на курс</a>
                                 </div>
                             </div>
@@ -107,7 +107,7 @@
                                 <div class="col-10 col-lg-8">
                                     <h1 class="display-2 text-white animated slideInDown mb-4">Подбайте про майбутнє своєї дитини сьогодні</h1>
                                     <p class="fs-5 fw-medium text-white mb-4 pb-2">Ми віримо, що кожна дитина унікальна й має безмежний потенціал</p>
-                                    <a href="classes.html" class="btn btn-primary rounded-pill py-sm-3 px-sm-5 me-3 animated slideInLeft">Дізнатись більше</a>
+                                    <a href="classes.html" class="btn btn-primary rounded-pill py-sm-3 px-sm-5 me-3 animated slideInLeft" style="margin-bottom: .375rem;">Дізнатись більше</a>
                                     <a href="appointment.html" class="btn btn-dark rounded-pill py-sm-3 px-sm-5 animated slideInRight">Записатись на курс</a>
                                 </div>
                             </div>
@@ -123,7 +123,7 @@
                                     <h1 class="display-2 text-white animated slideInDown mb-4">Команда професійних педагогів</h1>
                                     <p class="fs-5 fw-medium text-white mb-4 pb-2">Наша команда професійних педагогів створює теплу й творчу атмосферу, де діти навчаються, 
                                         розкривають свої таланти та готуються до шкільного життя із задоволенням</p>
-                                    <a href="classes.html" class="btn btn-primary rounded-pill py-sm-3 px-sm-5 me-3 animated slideInLeft">Дізнатись більше</a>
+                                    <a href="classes.html" class="btn btn-primary rounded-pill py-sm-3 px-sm-5 me-3 animated slideInLeft" style="margin-bottom: .375rem;">Дізнатись більше</a>
                                     <a href="appointment.html" class="btn btn-dark rounded-pill py-sm-3 px-sm-5 animated slideInRight">Записатись на курс</a>
                                 </div>
                             </div>
